@@ -4,24 +4,33 @@
 
 package de.gematik.test.tiger.common.config;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import org.yaml.snakeyaml.LoaderOptions;
 import org.yaml.snakeyaml.constructor.Constructor;
 import org.yaml.snakeyaml.constructor.SafeConstructor;
 import org.yaml.snakeyaml.nodes.MappingNode;
 import org.yaml.snakeyaml.nodes.ScalarNode;
 import org.yaml.snakeyaml.parser.ParserException;
 
+import java.util.Collection;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
+
 /**
  * A specialized {@link Constructor} that checks for duplicate keys.
  */
 public class DuplicateMapKeysForbiddenConstructor extends SafeConstructor {
 
+    public DuplicateMapKeysForbiddenConstructor() {
+        super(new LoaderOptions());
+    }
+
     @Override
     protected Map<Object, Object> constructMapping(MappingNode node) {
         try {
-            List<String> keys = node.getValue().stream().map(v -> ((ScalarNode) v.getKeyNode()).getValue()).collect(
-                Collectors.toList());
+            List<String> keys = node.getValue().stream().map(v -> ((ScalarNode) v.getKeyNode()).getValue()).toList();
             Set<String> duplicates = findDuplicates(keys);
             if (!duplicates.isEmpty()) {
                 throw new TigerConfigurationException(
